--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "private": true,
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.10.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.11.2"
@@ -29,6 +32,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
