--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^8.10.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router-dom": "6.11.2"
+    "react-router-dom": "6.11.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
