--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router-dom": "6.11.2",
+    "react-toastify": "^11.0.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
