--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.10.2",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "6.11.2",
     "react-toastify": "^11.0.5",
     "zod": "^3.24.2"
